feat: Add comprehensive middleware, services, tasks, testing, and utility context guides
- Implemented middleware for authentication, logging, rate limiting, validation, error handling, and CORS.
- Developed services for cloud storage integration and bot status management with detailed workflows.
- Created background tasks for video recording and browser-node communication, ensuring error handling and resource management.
- Established testing utilities for browser automation, including debug functions and isolated testing patterns.
- Introduced utility functions for logging, authentication, resilience, error categorization, and string manipulation.
- Enhanced documentation across all components for better understanding and usage patterns.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,61 @@
-node_modules
-dist
-*.log
-.DS_Store
+# Git and version control
 .git
 .gitignore
+.github
+
+# Documentation
+README.md
+DEPLOYMENT.md
+GRACEFUL_SHUTDOWN.md
+*.md
+
+# Development files
 .vscode
+.env*
+.editorconfig
+
+# Dependencies
+node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+dist
+build
+coverage
+
+# Test files
+src/test
+*.test.js
+*.test.ts
+*.spec.js
+*.spec.ts
+
+# Runtime files
+logs
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+*.swp
+*.swo
+*~
+
+# Assets that aren't needed in container
+assets/screenshots
+screenshots
+
+# Development Docker files
+docker-compose.yml
+Dockerfile.development
+Dockerfile.production.optimized
+Dockerfile.distroless
