--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,22 @@
-NODE_ENV=development
-SCREENAPP_AUTH_BASE_URL_V2=http://host.docker.internal:8081/v2
-MAX_RECORDING_DURATION_MINUTES=180
+# Audio Streaming Configuration for SecureScribe API
 
-# GCP bucket configuration for uploading debugging screenshots
-GCP_ACCESS_KEY_ID=
-GCP_SECRET_ACCESS_KEY=
-GCP_MISC_BUCKET=
-GCP_MISC_BUCKET_FOLDER=meeting-bot
-GCP_DEFAULT_REGION=
+# Enable audio streaming to SecureScribe
+ENABLE_AUDIO_STREAMING=true
 
-# For patching the status or logs of bots
-SCREENAPP_BACKEND_SERVICE_API_KEY=
+# SecureScribe WebSocket endpoint
+AUDIO_STREAMING_WS_ENDPOINT=ws://localhost:8000/api/ws/audio
+
+# Audio streaming parameters
+AUDIO_SAMPLE_RATE=44100
+AUDIO_CHANNELS=1
+AUDIO_FORMAT=wav
+AUDIO_CHUNK_DURATION=1000
+
+# Existing ScreenApp configuration (keep these)
+# GCP_DEFAULT_REGION=your-region
+# GCP_MISC_BUCKET=your-bucket
+# SCREENAPP_BACKEND_SERVICE_API_KEY=your-api-key
+# SCREENAPP_AUTH_BASE_URL_V2=http://localhost:8081/v2
+
+# Optional: Recording duration limits
+# MAX_RECORDING_DURATION_MINUTES=180
