--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,48 @@ services:
       dockerfile: Dockerfile.development
     environment:
       - NODE_ENV=development
+      - UPLOAD_TYPE=s3
+      - S3_ENDPOINT=http://minio:9000
+      - S3_REGION=us-east-1
+      - S3_ACCESS_KEY_ID=minioadmin
+      - S3_SECRET_ACCESS_KEY=minioadmin
+      - S3_BUCKET_NAME=meeting-bot
+      - S3_USE_MINIO_COMPATIBILITY=true
     ports:
-      - "3000:3000"
+      - '3000:3000'
     volumes:
       - .:/usr/src/app
       - ./assets/screenshots:/usr/src/app/assets/screenshots
       - /usr/src/app/node_modules
-    command: ["/bin/bash", "./start.sh"]
+    command: ['/bin/bash', './start.sh']
 
+  minio:
+    image: minio/minio
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    volumes:
+      - ./minio/data:/data
+    command: server /data --console-address ":9001"
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:9000/minio/health/live']
+      interval: 30s
+      timeout: 20s
+      retries: 3
+      start_period: 40s
+
+  minio-setup:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: ['/bin/sh', '-c']
+    command: >
+      mc alias set local http://minio:9000 minioadmin minioadmin &&
+      mc mb --ignore-existing local/meeting-bot &&
+      mc anonymous set download local/meeting-bot
 
 volumes:
   cache:
