--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,26 @@ services:
     environment:
       - NODE_ENV=development
     ports:
-      - "3000:3000"
+      - '3000:3000'
     volumes:
       - .:/usr/src/app
       - ./assets/screenshots:/usr/src/app/assets/screenshots
       - /usr/src/app/node_modules
-    command: ["/bin/bash", "./start.sh"]
+    command: ['/bin/bash', './start.sh']
 
+  minio:
+    image: minio/minio:latest
+    container_name: minio-server
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    environment:
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+    volumes:
+      - minio-data:/data
+    command: server /data --console-address ":9001"
 
 volumes:
   cache:
+  minio-data:
