--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "form-data": "^4.0.0",
     "fs-extra": "^11.2.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
