--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -77,6 +77,9 @@ RUN npm ci --only=production && npm cache clean --force
 COPY --from=builder /usr/src/app/dist ./dist
 COPY --from=builder /usr/src/app/xvfb-run-wrapper ./
 
+# 👉 Copy node_modules từ builder sang production
+COPY --from=builder /usr/src/app/node_modules ./node_modules
+
 # Process script in production stage
 RUN dos2unix /usr/src/app/xvfb-run-wrapper && chmod +x /usr/src/app/xvfb-run-wrapper
 
