--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,18 @@ services:
       - /usr/src/app/node_modules
     command: ['/bin/bash', './start.sh']
 
-  # minio:
-  #   image: minio/minio:latest
-  #   container_name: minio-server
-  #   ports:
-  #     - '9000:9000'
-  #     - '9001:9001'
-  #   environment:
-  #     MINIO_ACCESS_KEY: minioadmin
-  #     MINIO_SECRET_KEY: minioadmin
-  #   volumes:
-  #     - minio-data:/data
-  #   command: server /data --console-address ":9001"
+  minio:
+    image: minio/minio:latest
+    container_name: minio-server
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    environment:
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+    volumes:
+      - minio-data:/data
+    command: server /data --console-address ":9001"
 
 volumes:
   cache:
