--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -93,7 +93,7 @@ jobs:
 
   # Stage 2: Build Backend Image
   build-backend:
-    name: Build Backend Image
+    name: Build BOT Image
     runs-on: ubuntu-latest
     needs: check-runtime
     outputs:
