chore(docker): optimize dockerfile structure and dependency management
- Reorganize Dockerfile.development to separate package file copying from dependency installation
- Update development container startup to use start.sh script instead of direct node command
- Remove redundant package installation from Dockerfile.app builder stage
- Move production dependency installation to Dockerfile.runtime for better layer caching
- Create temp video directory in runtime image with proper permissions
- Add explicit USER directives in Dockerfile.app for security and clarity
- Remove volume mounts from docker-compose development service for cleaner configuration
- Simplify xvfb-run wrapper processing with proper user context switching
- Improve Docker layer caching efficiency by consolidating dependency management in runtime stage

--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -51,8 +51,10 @@ COPY auto_launch_protocols.json /etc/opt/chrome/policies/managed/auto_launch_pro
 # Install global tools
 RUN npm install -g nodemon
 
-# Install dependencies
+# Copy package files
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
 
 # Install Playwright and its dependencies
@@ -69,4 +71,4 @@ RUN chmod +x /usr/src/app/start.sh
 
 EXPOSE 3000
 
-CMD ["node", "dist/index.js"]
+CMD ["/bin/bash", "./start.sh"]
